Add a simple-tree-topology and update readme files

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,6 +25,7 @@ services:
     volumes:
       - /tmp/.X11-unix:/tmp/.X11-unix
       - /lib/modules:/lib/modules
+      - ./topology:/topo
     privileged: true
     tty: true
     networks: 
